hphp/test/zend/good/Zend/tests/028.php.expectf
bool(true)
bool(true)
bool(true)

Notice: Undefined index: 2 in %s/028.php on line 10

Fatal error: Function name must be a string in %s/028.php on line 10
